--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,13 @@ dependencies:
   flutter:
     sdk: flutter
 
+  firebase_core: ^0.4.0+9
+
+  firebase_auth: ^0.14.0+5
+  google_sign_in: ^4.0.7
+
+  provider: ^3.1.0+1
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
