--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   firebase_core: ^0.4.0+9
 
   # realtime db
-  # cloud_firestore: ^0.12.9+5
+  cloud_firestore: ^0.12.9+5
 
   # auth
   firebase_auth: ^0.14.0+5
