--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
 
   # qr
   qr_flutter: ^3.0.1
+  flutter_barcode_scanner: ^0.1.7
+  # barcode_scan: ^1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
