added partial ml cam

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="snaphunt"
         android:icon="@mipmap/ic_launcher">
+        
+        <meta-data
+            android:name="com.google.firebase.ml.vision.DEPENDENCIES"
+            android:value="label" />
+
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
