--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,6 +65,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+
+    api 'com.google.firebase:firebase-ml-vision-image-label-model:17.0.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
