--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,10 @@ dependencies:
   # realtime db
   cloud_firestore: ^0.12.9+5
 
+  # ml
+  firebase_ml_vision: ^0.9.2+2
+  image_picker: ^0.6.1+7
+
   # auth
   firebase_auth: ^0.14.0+5
   google_sign_in: ^4.0.7
@@ -36,7 +40,6 @@ dependencies:
   # qr
   qr_flutter: ^3.0.1
   flutter_barcode_scanner: ^0.1.7
-  # barcode_scan: ^1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
