--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,11 @@ dependencies:
   qr_flutter: ^3.0.1
   flutter_barcode_scanner: ^0.1.7
 
+  camera: ^0.5.6+2
+  path_provider: ^1.4.0
+
+  vibration: ^1.2.2
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
