--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,6 @@ dependencies:
 
   # ml
   firebase_ml_vision: ^0.9.2+2
-  image_picker: ^0.6.1+7
 
   # auth
   firebase_auth: ^0.14.0+5
@@ -31,10 +30,16 @@ dependencies:
   qr_flutter: ^3.0.1
   flutter_barcode_scanner: ^0.1.7
 
+  # camera feed
   camera: ^0.5.6+2
   path_provider: ^1.4.0
 
+  # vibrator
   vibration: ^1.2.2
+
+  # check connectivity
+  connectivity: ^0.4.5+2
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
