--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,11 @@ dependencies:
   # check connectivity
   connectivity: ^0.4.5+2
 
+  # autosize text
   auto_size_text: ^2.1.0
 
+  # local db
+  hive: ^1.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -54,3 +57,6 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+
+  assets:
+    - assets/default.json
