--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,9 +46,13 @@ dependencies:
   # local db
   hive: ^1.1.1
 
+  # screenshot widget
   screenshot: ^0.1.1
+
+  # share images
   esys_flutter_share: ^1.0.2
 
+  expandable: ^3.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
