lots of ui updates

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   # wave
   wave: ^0.0.8
 
+  flutter_staggered_animations: ^0.1.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
