--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,18 +54,34 @@ dependencies:
 
   expandable: ^3.0.1
 
+   # wave
+  wave: ^0.0.8
+
+  # list animations are <3
+  flutter_staggered_animations: ^0.1.2
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
-  # wave
-  wave: ^0.0.8
-
-  flutter_staggered_animations: ^0.1.2
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+   # launcher icons
+#   flutter_launcher_icons: ^0.7.4
+  flutter_native_splash: ^0.1.9
+
+flutter_native_splash:
+  image: assets/main.png
+  color: "ffffff"
+  ios: false
+# flutter_icons:
+#   android: "launcher_icon" 
+#   ios: false
+#   image_path: "assets/snaphunt_icon.png"
+#   adaptive_icon_background: "#ffffff"
+#   adaptive_icon_foreground: "assets/snaphunt_icon.png"
 
 flutter:
   uses-material-design: true
