--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,19 +69,19 @@ dev_dependencies:
     sdk: flutter
 
    # launcher icons
-#   flutter_launcher_icons: ^0.7.4
+  flutter_launcher_icons: ^0.7.4
+
   flutter_native_splash: ^0.1.9
 
 flutter_native_splash:
   image: assets/main.png
   color: "ffffff"
   ios: false
-# flutter_icons:
-#   android: "launcher_icon" 
-#   ios: false
-#   image_path: "assets/snaphunt_icon.png"
-#   adaptive_icon_background: "#ffffff"
-#   adaptive_icon_foreground: "assets/snaphunt_icon.png"
+
+flutter_icons:
+  android: "launcher_icon" 
+  ios: false
+  image_path: "assets/snaphunt_icon.png"
 
 flutter:
   uses-material-design: true
