--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,7 +74,7 @@ dev_dependencies:
   flutter_native_splash: ^0.1.9
 
 flutter_native_splash:
-  image: assets/main.png
+  image: assets/splash.png
   color: "ffffff"
   ios: false
 
