added robustness. updated multi results

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ flutter:
     - assets/default.json
     - assets/top.png
     - assets/main.png
+    - assets/trophy.png
   
   fonts:
   - family: SF_Atarian_System
