--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  # introduction
+  intro_views_flutter: '^2.8.0'
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
