--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,12 @@ flutter:
     - assets/top.png
     - assets/main.png
     - assets/trophy.png
+    - assets/intro_one.png
+    - assets/intro_two.png
+    - assets/intro_three.png
+    - assets/intro_four.png
+    - assets/intro_five.png
+    - assets/intro_six.png
   
   fonts:
   - family: SF_Atarian_System
