--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: snaphunt
 description: SnapHunt - Flutter Philippines Hackathon 2019 Entry
 
-version: 0.1.0+1
+version: 1.0.0
 
 environment:
   sdk: ">=2.2.2 <3.0.0"
