--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,6 +46,7 @@ android {
         applicationId "com.em2.snaphunt"
         minSdkVersion 21
         targetSdkVersion 28
+        multiDexEnabled true
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
@@ -58,9 +59,9 @@ android {
            storePassword keystoreProperties['storePassword']
        }
    }
+
     buildTypes {
         release {
-            // signingConfig signingConfigs.debug
             signingConfig signingConfigs.release
         }
     }
@@ -73,7 +74,7 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    api 'com.google.firebase:firebase-ml-vision-image-label-model:17.0.2'
+    api 'com.google.firebase:firebase-ml-vision-image-label-model:19.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
