--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,12 +66,18 @@ dependencies:
   # introduction
   intro_views_flutter: '^2.8.1'
 
+  auto_route: ^0.5.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_native_splash: ^0.1.9
 
   lint: ^1.0.0
+  
+  auto_route_generator: ^0.5.0
+
+  build_runner:
 
 flutter_native_splash:
   image: assets/splash.png
