--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,7 @@ dependencies:
   # share images
   esys_flutter_share: ^1.0.2
 
-  expandable: ^3.0.1
+  expandable: ^4.1.4
 
    # wave
   wave: ^0.0.8
@@ -64,13 +64,13 @@ dependencies:
   flutter_staggered_animations: ^0.1.2
 
   # introduction
-  intro_views_flutter: '^2.8.1'
+  intro_views_flutter: ^2.8.1
 
   auto_route: ^0.5.0
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  # flutter_test:
+  #   sdk: flutter
   flutter_native_splash: ^0.1.9
 
   lint: ^1.0.0
