--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,14 @@ dependencies:
   intro_views_flutter: ^2.8.1
 
   auto_route: ^0.5.0
+  
+  freezed_annotation:
+
+  state_notifier: ^0.4.0
+
+  flutter_state_notifier: ^0.4.2
+
+  json_serializable: ^3.3.0
 
 dev_dependencies:
   # flutter_test:
@@ -78,6 +86,8 @@ dev_dependencies:
   auto_route_generator: ^0.5.0
 
   build_runner:
+
+  freezed:
 
 flutter_native_splash:
   image: assets/splash.png
