--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,20 +13,20 @@ dependencies:
     sdk: flutter
 
   # firebase
-  firebase_core: ^0.4.4+3
+  firebase_core: ^0.5.0
 
   # realtime db
-  cloud_firestore: ^0.13.5
+  cloud_firestore: ^0.14.0+2
 
   # ml
-  firebase_ml_vision: ^0.9.3+8
+  firebase_ml_vision: ^0.9.6+2 
 
   # auth
-  firebase_auth: ^0.16.0
-  google_sign_in: ^4.4.4
+  firebase_auth: ^0.18.0+1
+  google_sign_in: ^ 4.5.3
 
   # di
-  provider: ^4.1.1
+  provider: ^4.3.2+1
 
   # qr
   qr_flutter: ^3.2.0
@@ -34,20 +34,20 @@ dependencies:
 
   # camera feed
   camera: ^0.5.7+4
-  path_provider: ^1.6.7
+  path_provider: ^1.6.14
 
   # vibrator
-  vibration: ^1.2.4
+  vibration: ^1.4.0
 
   # check connectivity
-  connectivity: ^0.4.8+5
+  connectivity: ^0.4.9+2
 
   # autosize text
   auto_size_text: ^2.1.0
 
   # local db
-  hive: ^1.4.1+1
-  hive_flutter: ^0.3.0+2
+  hive: ^1.4.4
+  hive_flutter: ^0.3.1
 
   # screenshot widget
   screenshot: ^0.1.1
